color e imagen en la nav

--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,6 @@
 .bg-beige {
     background-color: #f5f5dc; /* Beige claro */
 }
+.navbar-custom {
+    background-color: #87CEEB; /* Celeste claro */
+}
