--- a/templates/autorizacion/inicioSesion.phtml
+++ b/templates/autorizacion/inicioSesion.phtml
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group">
             <label for="contraseña">contraseña</label>
-            <input type="contraseña" required class="form-control" id="password" name="password">
+            <input type="contraseña" required class="form-control" id="password" name="contraseña">
         </div>
 
         <?php if ($error) : ?>
