--- a/templates/tareas/header.phtml
+++ b/templates/tareas/header.phtml
@@ -24,12 +24,15 @@ $fecha = new DateTime();
         <a class="navbar-brand" href="list">
             <img src="img/hugoJuguetesLogo.jpg" alt="logo" width="70px">
         </a>
-        <a class="navbar-brand" href="#">Jugueteria</a>
+        <a class="navbar-brand" href="#">Listado Juguetes</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+            <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="marca">marca</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="inicioSesion">inicioSesion</a>
                 </li>
