--- a/templates/mostrar/juguete.phtml
+++ b/templates/mostrar/juguete.phtml
@@ -18,6 +18,7 @@ require 'templates/tareas/header.phtml';
                         <a href="jugueteId/<?php echo $item->id_juguete; ?>" class="btn btn-primary">Ver Producto</a>
                         <a href="eliminarJuguete/<?php echo $item->id_juguete; ?>" class="btn btn-danger">Eliminar</a>
                         <a href="actualizarJuguete/<?php echo $item->id_juguete; ?>" class="btn btn-success">Modificar</a>
+                        <a href="agregarJuguete/<?php echo $item->id_juguete; ?>" class="btn btn-primary">Agregar</a>
                     </div>
                 </div>
             </div>      
