--- a/templates/mostrar/juguetePorId.phtml
+++ b/templates/mostrar/juguetePorId.phtml
@@ -5,7 +5,7 @@
         <div class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="<?= $item->img; ?>" class="img-fluid rounded-start" alt="Imagen del Producto">
+                <img src="<?= $juguete->img; ?>" class="img-fluid rounded-start" alt="Imagen del Producto">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
