formularios creados, errores en tabla:marca

--- a/templates/formularios/agregar.juguete.phtml
+++ b/templates/formularios/agregar.juguete.phtml
@@ -1,19 +1,11 @@
-<?php require_once 'templates/header.php'; ?>
+<?php require_once 'templates/tareas/header.phtml'; ?>
 
 <div class="container mt-1">
     <h5>Carga de Producto</h5>
     <form action="insertarJuguete" method="POST">
         <div class="mb-1">
-            
-            <select class="form-select" id="marca" name="id_marca">
-                <?php foreach($marca as $marc): ?>
-                    <option value="<?= $marc->id_marca; ?>"><?= $marc->marca; ?></option>
-                <?php endforeach; ?>
-            </select>
-        </div>
-        <div class="mb-1">
-            <label for="nombreJuguete" class="form-label"> nombre juguete</label>
-            <input type="text" class="form-control" id="nombreJuguete" name="nombreJuguete" required>
+            <label for="nombreProducto" class="form-label"> nombre producto</label>
+            <input type="text" class="form-control" id="nombreProducto" name="nombreProducto" required>
         </div>
         <div class="mb-1">
             <label for="precio" class="form-label">Precio</label>
@@ -25,7 +17,7 @@
         </div>
         <div class="mb-1">
             <label for="codigo" class="form-label">codigo</label>
-            <input type="text" class="form-control" id="codigo" name="codigo" required>
+            <input type="number" class="form-control" id="codigo" name="codigo" required>
         </div>
         <div class="mb-1">
             <label for="img" class="form-label">Imagen</label>
