--- a/templates/formularios/agregar.marca.phtml
+++ b/templates/formularios/agregar.marca.phtml
@@ -1,6 +1,6 @@
 <?php
 
-require './templates/tareas/header.php';  ?>
+require './templates/tareas/header.phtml';  ?>
 
     <div class="container mt-3">
         <h2>Carga de marca</h2>
@@ -18,10 +18,14 @@ require './templates/tareas/header.php';  ?>
                 <label for="caracteristica" class="form-label">caracteristica</label>
                 <input type="text" class="form-control" id="origen" name="caracteristica" required>
             </div>
+            <div class="mb-1">
+                <label for="nombreMarca" class="form-label">nombre marca</label>
+                <input type="text" class="form-control" id="origen" name="nombreMarca" required>
+            </div>
             <button type="submit" class="btn btn-primary">Guardar marca</button>
         </form>
     </div>
 
     <?php
 
-    require_once 'templates/footer.php';
+    require_once 'templates/tareas/footer.phtml';
