--- a/templates/mostrar/marcaPorId.phtml
+++ b/templates/mostrar/marcaPorId.phtml
@@ -12,6 +12,7 @@
                         <div class="card-body">
                             <h5 class="card-title"><?= $marc->origen; ?></h5>
                             <p class="card-text"><?= $marc->caracteristica; ?></p>
+                            <p class="card-text"><?= $marc->nombreMarca; ?></p>
                             
                             <a href="marca" class="btn btn-primary">Volver</a>
                         </div>
