--- a/templates/tareas/header.phtml
+++ b/templates/tareas/header.phtml
@@ -31,7 +31,7 @@ $fecha = new DateTime();
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="marca">marca</a>
+                    <a class="nav-link" aria-current="page" href="marca">Listado marca</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="inicioSesion">inicioSesion</a>
@@ -39,7 +39,20 @@ $fecha = new DateTime();
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="cierreSesion">cierreSesion</a>
                 </li>
+                <li class="nav-item">
+            <a class="nav-link" href="agregarJugueteFormulario">Agregar Juguetes</a>
+                </li>
+                <li class="nav-item">
+                <li class="nav-item">
+                    <a class="nav-link" href="agregarMarcaFormulario">Agregar marca</a>
+                </li>
+                    <a class="nav-link" href="lista">Gestion juguetes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="marca">Gestion Marca</a>
+                </li>
             </ul>
         </div>
     </nav>
 </header>
+
