--- a/templates/formularios/agregar.marca.phtml
+++ b/templates/formularios/agregar.marca.phtml
@@ -22,6 +22,10 @@ require './templates/tareas/header.phtml';  ?>
                 <label for="nombreMarca" class="form-label">nombre marca</label>
                 <input type="text" class="form-control" id="origen" name="nombreMarca" required>
             </div>
+            <div class="mb-1">
+            <label for="imgMarca" class="form-label">Imagen</label>
+            <input type="text" class="form-control" id="imgMarca" name="imgMarca">
+        </div>
             <button type="submit" class="btn btn-primary">Guardar marca</button>
         </form>
     </div>
