probando soluciones form

--- a/templates/formularios/agregar.juguete.phtml
+++ b/templates/formularios/agregar.juguete.phtml
@@ -2,7 +2,7 @@
 
 <div class="container mt-1">
     <h5>Carga de Producto</h5>
-    <form action="insertarJuguete" method="POST">
+    <form action="agregarJuguete" method="POST">
         <div class="mb-1">
             <label for="nombreProducto" class="form-label"> nombre producto</label>
             <input type="text" class="form-control" id="nombreProducto" name="nombreProducto" required>
