--- a/templates/mostrar/marca.phtml
+++ b/templates/mostrar/marca.phtml
@@ -12,7 +12,7 @@ require './templates/tareas/header.phtml';
                         <h5 class="card-title"><?= htmlspecialchars($marca->nombreMarca); ?></h5>
                         <p class="card-text">
                             <strong>Origen:</strong> <?= htmlspecialchars($marca->origen); ?><br>
-                            <strong>caracteristica:</strong> <?= htmlspecialchars($marca->característica); ?><br>
+                            <strong>caracteristica:</strong> <?= htmlspecialchars($marca->caracteristica); ?><br>
                             <strong>Nombre de Marca:</strong> <?= htmlspecialchars($marca->nombreMarca); ?>
                         </p>
                         <a href="marca_id/<?= $marca->id_marca; ?>" class="btn btn-primary">Ver Productos</a>
