corrigiendo errores de 2da entrega

--- a/templates/formularios/modificar.juguete.phtml
+++ b/templates/formularios/modificar.juguete.phtml
@@ -1,5 +1,5 @@
 <?php
-require_once 'templates/header.php';  ?>
+require 'templates/tareas/header.phtml';   ?>
 
 <div class="container mt-1" >
     <h2>Modificar juguete</h2>
