--- a/templates/mostrar/marcaPorId.phtml
+++ b/templates/mostrar/marcaPorId.phtml
@@ -1,28 +1,28 @@
 <?php require './templates/tareas/header.phtml'; ?>
 
-    <div class="container mt-5">
-        <?php  foreach($marcas as $marca) { ?>
-            
-            <div class="card mb-3">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="<?= $marc->img; ?>" class="img-fluid rounded-start" alt="Imagen del Producto">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title"><?= $marc->origen; ?></h5>
-                            <p class="card-text"><?= $marc->caracteristica; ?></p>
-                            <p class="card-text"><?= $marc->nombreMarca; ?></p>
-                            
-                            <a href="marca" class="btn btn-primary">Volver</a>
-                        </div>
-                    </div>
+<div class="container mt-5">
+    <div class="card mb-3">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="<?= $marca->imgMarca; ?>" class="img-fluid rounded-start" alt="Imagen del Producto">
+                <?php var_dump($marca->img); ?>
+
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><?= $marca->origen; ?></h5>
+                    <p class="card-text"><?= $marca->caracteristica; ?></p>
+                    <p class="card-text"><?= $marca->nombreMarca; ?></p>
+                    
+                    <a href="marca" class="btn btn-primary">Volver</a>
                 </div>
             </div>
-        <?php } ?>
+        </div>
     </div>
+</div>
 
 <?php require_once 'templates/tareas/footer.phtml'; ?>
+
 
 
     
