acomodando boton agregar marcaas

--- a/templates/formularios/modificar.marca.phtml
+++ b/templates/formularios/modificar.marca.phtml
@@ -1,6 +1,6 @@
 <?php
 
-   require './templates/header.php';?>
+   require './templates/header.phtml';?>
     
     <div class="container mt-5">
 
@@ -24,4 +24,4 @@
 
     <?php
 
-    require_once 'templates/footer.php';
+    require_once 'templates/footer.phtml';
