arreglando boton editar

--- a/templates/formularios/modificar.juguete.phtml
+++ b/templates/formularios/modificar.juguete.phtml
@@ -29,7 +29,7 @@ require 'templates/tareas/header.phtml';   ?>
         </div>
         <div class="mb-1">
             <label for="codigo" class="form-label">Codigo</label>
-            <input type="text" class="form-control" id="codigo" name="codigo" value="<?= $item[0]->codigo; ?>" required>
+            <input type="number" class="form-control" id="codigo" name="codigo" value="<?= $item[0]->codigo; ?>" required>
         </div>
         <div class="mb-1">
             <label for="img" class="form-label">Imagen</label>
