--- a/templates/forms/modificar.actor.phtml
+++ b/templates/forms/modificar.actor.phtml
@@ -12,7 +12,7 @@
             </div>
             <div class="mb-3">
                 <label for="nombre_actor" class="form-label">Nombre del actor</label>
-                <input type="text" class="form-control" id="material" name="material" value="<?=$actor[0]->nombre_actor;?>" required>
+                <input type="text" class="form-control" id="nombre_actor" name="nombre_actor" value="<?=$actor[0]->nombre_actor;?>" required>
             </div>
             <div class="mb-3">
                 <label for="fecha_nacimiento" class="form-label">Fecha de nacimiento </label>
