--- a/templates/task/header.phtml
+++ b/templates/task/header.phtml
@@ -28,7 +28,7 @@
             <a class="nav-link" aria-current="page" href="login">Login</a>
           </li>
           <li class="nav-item active">
-          <a class="nav-link" href="lista">listaado <span class="sr-only"></span></a>
+          <a class="nav-link" href="lista">listado <span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
            <a class="nav-link" href="actor">actores</a>
